WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
226411
Web process terminates when attempting to log in on bankid.no
https://bugs.webkit.org/show_bug.cgi?id=226411
Summary
Web process terminates when attempting to log in on bankid.no
Wenson Hsieh
Reported
2021-05-28 18:33:05 PDT
rdar://77419432
Attachments
For EWS
(15.94 KB, patch)
2021-05-28 19:19 PDT
,
Wenson Hsieh
no flags
Details
Formatted Diff
Diff
Patch
(15.81 KB, patch)
2021-05-28 20:26 PDT
,
Wenson Hsieh
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2021-05-28 19:19:20 PDT
Created
attachment 430082
[details]
For EWS
Chris Dumez
Comment 2
2021-05-28 20:18:06 PDT
Comment on
attachment 430082
[details]
For EWS View in context:
https://bugs.webkit.org/attachment.cgi?id=430082&action=review
> Source/WebCore/platform/graphics/displaylists/DisplayListReplayer.h:60 > + WEBCORE_EXPORT Replayer(GraphicsContext&, const DisplayList&, const ImageBufferHashMap* = nullptr, const NativeImageHashMap* = nullptr, const FontRenderingResourceMap* = nullptr, WebCore::ImageBuffer* maskImageBuffer = { }, Delegate* = nullptr);
nit: = nullptr would look clearer IMO.
> Source/WebKit/GPUProcess/graphics/RemoteRenderingBackend.cpp:501 > + m_currentMaskImageBuffer = makeRefPtr(imageBuffer);
m_currentMaskImageBuffer = &imageBuffer; should work
> Source/WebKit/GPUProcess/graphics/RemoteRenderingBackend.h:87 > + void didCreateMaskImageBuffer(WebCore::ImageBuffer&);
Shouldn't this be marked as final / override?
> Source/WebKit/GPUProcess/graphics/RemoteRenderingBackend.h:88 > + void didResetMaskImageBuffer();
ditto.
Wenson Hsieh
Comment 3
2021-05-28 20:20:41 PDT
Comment on
attachment 430082
[details]
For EWS View in context:
https://bugs.webkit.org/attachment.cgi?id=430082&action=review
>> Source/WebCore/platform/graphics/displaylists/DisplayListReplayer.h:60 >> + WEBCORE_EXPORT Replayer(GraphicsContext&, const DisplayList&, const ImageBufferHashMap* = nullptr, const NativeImageHashMap* = nullptr, const FontRenderingResourceMap* = nullptr, WebCore::ImageBuffer* maskImageBuffer = { }, Delegate* = nullptr); > > nit: = nullptr would look clearer IMO.
Good point. Changed to `nullptr`.
>> Source/WebKit/GPUProcess/graphics/RemoteRenderingBackend.cpp:501 >> + m_currentMaskImageBuffer = makeRefPtr(imageBuffer); > > m_currentMaskImageBuffer = &imageBuffer; > > should work
Changed to `m_currentMaskImageBuffer = &imageBuffer;`!
>> Source/WebKit/GPUProcess/graphics/RemoteRenderingBackend.h:87 >> + void didCreateMaskImageBuffer(WebCore::ImageBuffer&); > > Shouldn't this be marked as final / override?
Ah, so these are just methods on RemoteRenderingBackend; the overridden methdos are in `RemoteImageBuffer`, where they are marked as `final`. (The RemoteImageBuffer methods are just plumbing directly into `RemoteRenderingBackend`)
Wenson Hsieh
Comment 4
2021-05-28 20:26:13 PDT
Created
attachment 430086
[details]
Patch
Wenson Hsieh
Comment 5
2021-05-28 22:07:48 PDT
Comment on
attachment 430086
[details]
Patch Thank you for the review!
EWS
Comment 6
2021-05-28 22:27:52 PDT
Committed
r278235
(
238272@main
): <
https://commits.webkit.org/238272@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 430086
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug