Source/WebCore/platform/graphics/displaylists/DisplayListReplayer.h
@@ -57,7 +57,7 @@ class Replayer {
     WTF_MAKE_NONCOPYABLE(Replayer);
 public:
     class Delegate;
-    WEBCORE_EXPORT Replayer(GraphicsContext&, const DisplayList&, const ImageBufferHashMap* = nullptr, const NativeImageHashMap* = nullptr, const FontRenderingResourceMap* = nullptr, Delegate* = nullptr);
+    WEBCORE_EXPORT Replayer(GraphicsContext&, const DisplayList&, const ImageBufferHashMap* = nullptr, const NativeImageHashMap* = nullptr, const FontRenderingResourceMap* = nullptr, WebCore::ImageBuffer* maskImageBuffer = nullptr, Delegate* = nullptr);
     WEBCORE_EXPORT ~Replayer();
 
     WEBCORE_EXPORT ReplayResult replay(const FloatRect& initialClip = { }, bool trackReplayList = false);
@@ -66,6 +66,8 @@ public:
     public:
         virtual ~Delegate() { }
         virtual bool apply(ItemHandle, GraphicsContext&) { return false; }
+        virtual void didCreateMaskImageBuffer(WebCore::ImageBuffer&) { }
+        virtual void didResetMaskImageBuffer() { }
     };
     
 private:
